Fix layout issues on mobile landscape, add click outside modal to close.

--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ body {
 #fade-div {
   z-index: 1;
 
-  width: 100vw;
-  height: 100vh;
+  min-width: 100%;
+  min-height: 100%;
   display: block;
   position: absolute;
   top: 0;
@@ -48,7 +48,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-
+  padding-bottom: 3em;
   /* padding: 2rem; */
 }
 
@@ -249,11 +249,12 @@ footer a:hover {
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
+  position: absolute;
+  bottom: -2.5%;
   left: 0;
   right: 0;
   min-width: 100%;
+  /* height: 100px; */
   /* background-color: #333; */
   padding: 1em;
   color: #915f5f;
@@ -314,9 +315,6 @@ footer > * {
   .project-modal > div {
     width: 100%;
     /* height: 50%; */
-  }
-
-  .project-modal .description-div {
   }
 }
 
